--- a/php8.1/linux/docker-compose.yml
+++ b/php8.1/linux/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - /etc/passwd:/etc/passwd:ro
       - /etc/group:/etc/group:ro
     working_dir: /var/www/html
+    networks:
+        - app-net
 
   nginx:
     container_name: nginx
@@ -20,3 +22,27 @@ services:
       - ./src:/var/www/html
     depends_on:
       - php
+    networks:
+      - app-net
+
+  mysql:
+      image: mysql:8.0.27
+      ports:
+          - "3306:3306"
+      environment:
+          MYSQL_ROOT_PASSWORD: mysql
+          MYSQL_DATABASE: db
+          MYSQL_USER: user
+          MYSQL_PASSWORD: password
+      restart: always
+      volumes:
+          - mysql-volume:/var/lib/mysql
+      networks:
+          - app-net
+
+volumes:
+    mysql-volume:
+
+networks:
+    app-net:
+        driver: bridge
