--- a/php8.2/linux/docker-compose.yml
+++ b/php8.2/linux/docker-compose.yml
@@ -1,22 +1,48 @@
 version: '3'
 services:
-  php:
-    container_name : php
-    build : php
-    volumes:
-      - ./src:/var/www/html
-      - ./php/php.ini:/usr/local/etc/php/php.ini
-      - /etc/passwd:/etc/passwd:ro
-      - /etc/group:/etc/group:ro
-    working_dir: /var/www/html
+    php:
+        container_name : php
+        build : php
+        volumes:
+            - ./src:/var/www/html
+            - ./php/php.ini:/usr/local/etc/php/php.ini
+            - /etc/passwd:/etc/passwd:ro
+            - /etc/group:/etc/group:ro
+        working_dir: /var/www/html
+        networks:
+            - app-net
 
-  nginx:
-    container_name: nginx
-    image: nginx:1.19.5-alpine
-    ports:
-      - 8888:80
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./src:/var/www/html
-    depends_on:
-      - php
+    nginx:
+        container_name: nginx
+        image: nginx:1.19.5-alpine
+        ports:
+            - 8888:80
+        volumes:
+            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+            - ./src:/var/www/html
+        depends_on:
+            - php
+        networks:
+            - app-net
+
+    mysql:
+        image: mysql:8.0.27
+        ports:
+            - "3306:3306"
+        environment:
+            MYSQL_ROOT_PASSWORD: mysql
+            MYSQL_DATABASE: db
+            MYSQL_USER: user
+            MYSQL_PASSWORD: password
+        restart: always
+        volumes:
+            - mysql-volume:/var/lib/mysql
+        networks:
+            - app-net
+
+volumes:
+    mysql-volume:
+
+networks:
+    app-net:
+        driver: bridge
