--- a/php8.2/linux/nginx/default.conf
+++ b/php8.2/linux/nginx/default.conf
@@ -4,13 +4,13 @@ server {
   index index.php index.html;
 
   # for common oss package dev
-  root /var/www/html;
+  # root /var/www/html;
 
   # for Laravel
-  #root /var/www/html/package/laravel/public;
-  #location / {
-  #  try_files $uri $uri/ /index.php?$query_string;
-  #}
+  root /var/www/html/package/laravel/public;
+  location / {
+    try_files $uri $uri/ /index.php?$query_string;
+  }
 
   location ~ \.php$ {
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
